--- a/micro-service-cloud-consumer-dept-feign/pom.xml
+++ b/micro-service-cloud-consumer-dept-feign/pom.xml
@@ -51,7 +51,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+
+		<!--hystrix 依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+
 	</dependencies>
+
+
 	<build>
 		<plugins>
 			<plugin>
