--- a/micro-service-cloud-consumer-dept-feign/src/main/resources/application.yml
+++ b/micro-service-cloud-consumer-dept-feign/src/main/resources/application.yml
@@ -10,6 +10,27 @@ eureka:
     fetch-registry: true  #???????????????
 
 
+feign:
+  hystrix:
+   enabled: true # 开启客户端 hystrix
+
+
+
+######################### Ribbon 客户端超时控制 ###################################
 ribbon:
-  ReadTimeout: 6000 #???????????????????????????????????
-  ConnectionTimeout: 6000 #???????????????????
+  ReadTimeout: 6000 #建立连接所用的时间，适用于网络状况正常的情况下，两端两端连接所用的时间
+  ConnectionTimeout: 6000 #建立连接后，服务器读取到可用资源的时间
+######################配置请求超时时间##########################
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 7000
+    ####################配置具体方法超时时间 为 3 秒########################
+    DeptHystrixService#deptInfo_Timeout(Integer):
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 3000
