--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>micro-service-cloud-consumer-dept-80</module>
     <module>micro-service-cloud-consumer-dept-feign</module>
     <module>micro-service-cloud-provider-dept-hystrix-8004</module>
+    <module>micro-service-cloud-gateway-9527</module>
   </modules>
 
   <parent>
