--- a/micro-service-cloud-gateway-9527/src/main/resources/application.yml
+++ b/micro-service-cloud-gateway-9527/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
         #? micro-service-cloud-provider-dept-8001 ????????????????????????? API ????? 9527
         - id: provider_dept_list_routh   #?? id,???????????????????
           uri: http://localhost:8001          # ???????????? http://localhost:9527/dept/list -> http://localhost:8001/dept/list
+#          uri: lb://MICROSERVICECLOUDPROVIDERDEPT # ????????????????????   http://eureka7001.com:9527/dept/list
+           # http://c.biancheng.net/springcloud/gateway.html
           predicates:
             #????????????????
             - Path=/dept/list/**               #??????? ???Path ? P ???
