--- a/spring-cloud-alibaba-demo/spring-cloud-alibaba-sentinel-service-9401/pom.xml
+++ b/spring-cloud-alibaba-demo/spring-cloud-alibaba-sentinel-service-9401/pom.xml
@@ -32,6 +32,7 @@
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-datasource-nacos</artifactId>
+			<version>1.8.0</version>
 		</dependency>
 
 		<dependency>
