--- a/spring-cloud-alibaba-demo/spring-cloud-alibaba-provider-mysql-9003/src/main/resources/application.yml
+++ b/spring-cloud-alibaba-demo/spring-cloud-alibaba-provider-mysql-9003/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     username: root        #????????
     password: 123456        #???????
-    url: jdbc:mysql://localhost:3306/ddpay       #???url
+    url: jdbc:mysql://192.168.80.148:3306/ddpay       #???url
     driver-class-name: com.mysql.jdbc.Driver
 management:
   endpoints:
